<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E3E3"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="239dp"
        android:layout_height="51dp"
        android:backgroundTint="#8C8C8C"
        android:onClick="paginaWeb"
        android:text="@string/btnWeb"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="74dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="239dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8C8C8C"
        android:onClick="llamadaTelf"
        android:text="@string/btnTelefono"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button7"
        android:layout_width="239dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8C8C8C"
        android:onClick="googleMaps"
        android:text="@string/btnMaps"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="239dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8C8C8C"
        android:onClick="tomarFoto"
        android:text="@string/btnFoto"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="239dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8C8C8C"
        android:onClick="enviarCorreo"
        android:text="@string/btnCorreo"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

</androidx.constraintlayout.widget.ConstraintLayout>